--- a/.github/workflows/nose.yaml
+++ b/.github/workflows/nose.yaml
@@ -10,7 +10,7 @@ jobs:
         python-version: [3.5, 3.6, 3.7, 3.8]
     steps:
     - name: Install expect
-      run: sudo apt-get install -y expect
+      run: sudo apt-get install -y expect tidy
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
